<resources>
    <string name="app_name">Tourslate</string>
    <string-array name="dropdown_items_input">
        <item>Indonesia</item>
        <item>English</item>
        <item>Javanese</item>
    </string-array>
    <string-array name="dropdown_items_result">
        <item>English</item>
        <item>Indonesia</item>
        <item>Javanese</item>
    </string-array>
    <string name="translate">Translate</string>
    <string name="hint">What do you want to translate?</string>
    <string name="mode">Night Mode</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_top">L O G I N</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="sudah_memiliki_akun">Do you have account?</string>
    <string name="login_disini">Login Here!</string>

    //onboading
    <string name="tittle_menu_1">Welcome to the Tourslate app!</string>
    <string name="tittle_menu_2">Easy use translate feature!</string>
    <string name="tittle_menu_3">There is a History feature!</string>
    <string name="desc_menu_1">Discover a new way to understand every regional language with the Tourslate app. Start now increasing your productivity with our features!</string>
    <string name="desc_menu_2">Tourslate App makes it easy for you to translate every regional language from western Indonesia to eastern Indonesia with just 1 click!</string>
    <string name="desc_menu_3">This feature to make it easier for us to find out what we have translated, lets use Tourslate!</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_text">We will send you a link to your email to reset your password.</string>
    <string name="enter_registered_email">Please enter your registered email.</string>
</resources>