<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="@font/gemunu_libre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/noto_serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:elevation="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/noto_serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:elevation="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:fontFamily="@font/noto_serif"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudah_memiliki_akun"
        android:textColor="@color/blue"
        android:fontFamily="@font/noto_serif"
        app:layout_constraintEnd_toEndOf="@+id/btnSignup"
        app:layout_constraintStart_toStartOf="@+id/btnSignup"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <Button
        android:id="@+id/btnLoginHere"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/login_disini"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:fontFamily="@font/noto_serif"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>